--- a/src/components/heroBanner/style.css
+++ b/src/components/heroBanner/style.css
@@ -23,7 +23,7 @@
   justify-content: center;
   background-color: rgba(0, 0, 0, 0.5);
 }
-.title {
+.heroBannercontext .title {
   font-size: 90px;
   font-weight: 700;
 }
